# tsocks

./: ChangeLog  acconfig.h  common.c  common.h  config.h.in  config.status  configure  configure.ac  configure.in  inspectsocks.c  parser.c  parser.h  saveme.c  tsocks.1  tsocks.8  tsocks.c  tsocks.conf.5  tsocks.conf.complex.example  tsocks.conf.simple.example  tsocks.h  validateconf.c
